<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.login.LoginActivity">

    <include
        android:id="@+id/toolbar_sing_up"
        layout="@layout/layout_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name"
        style="@style/editText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:hint="@string/name"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/surName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_sing_up"
        app:layout_constraintVertical_weight="0.1"/>

    <EditText
        android:id="@+id/surName"
        style="@style/editText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/surname"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/userName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintVertical_weight="0.1"/>

    <EditText
        android:id="@+id/userName"
        style="@style/editText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/username"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/surName"
        app:layout_constraintVertical_weight="0.1"/>

    <EditText
        android:id="@+id/email"
        style="@style/editText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userName"
        app:layout_constraintVertical_weight="0.1"/>

    <EditText
        android:id="@+id/password"
        style="@style/editText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/confirmPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_weight="0.1"/>

    <EditText
        android:id="@+id/confirmPassword"
        style="@style/editText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintVertical_weight="0.1"/>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/inter"
        android:lineSpacingExtra="8sp"
        android:text="I agree with the Terms &amp;\n Condition"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/tv_empty_fields"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword"
        app:layout_constraintVertical_weight="0.1"/>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_empty_fields"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginEnd="52dp"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />

    <TextView
        android:id="@+id/tv_empty_fields"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:textColor="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/btnSingUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnSingUp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="45dp"
        android:layout_marginBottom="41dp"
        style="@style/buttonStart"
        android:text="@string/sing_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_empty_fields"
        app:layout_constraintVertical_weight="0.1"/>

</androidx.constraintlayout.widget.ConstraintLayout>