<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.fragment.HomeFragment"
    android:background="@color/background">

    <ImageButton
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="@drawable/background_button_notification"
        android:layout_marginEnd="17dp"
        android:src="@drawable/ic_notification"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"/>
    
    <TextView
        android:id="@+id/rectangle_7"
        android:layout_width="238dp"
        android:layout_height="36dp"
        android:text="@string/jl_jayakatwang_no_301"
        android:textSize="16sp"
        android:textAlignment="center"
        android:paddingVertical="5dp"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="24dp"
        android:layout_marginStart="15dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/rectangle_7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_hello"
        android:layout_width="209dp"
        android:layout_height="33dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="86dp"
        android:fontFamily="@font/poppins_bold"
        tools:text="Hola, Cliente"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:layout_marginStart="15dp"
        android:text="@string/message"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ly_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="176dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_favorite"
            style="@style/imageButton"
            android:src="@drawable/ic_favorites"
            app:layout_constraintEnd_toStartOf="@id/btn_offer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite"
            android:textAppearance="@style/textSecondary"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@id/btn_favorite"
            app:layout_constraintStart_toStartOf="@id/btn_favorite"
            app:layout_constraintTop_toBottomOf="@id/btn_favorite"/>

        <ImageButton
            android:id="@+id/btn_offer"
            android:src="@drawable/ic_offer"
            style="@style/imageButton"
            app:layout_constraintEnd_toStartOf="@+id/btn_trend"
            app:layout_constraintStart_toEndOf="@+id/btn_favorite"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/offer"
            android:textAppearance="@style/textSecondary"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@id/btn_offer"
            app:layout_constraintStart_toStartOf="@id/btn_offer"
            app:layout_constraintTop_toBottomOf="@id/btn_offer" />

        <ImageButton
            android:id="@+id/btn_trend"
            style="@style/imageButton"
            android:src="@drawable/ic_trend"
            app:layout_constraintEnd_toStartOf="@id/btn_more_info"
            app:layout_constraintStart_toEndOf="@id/btn_offer"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trend"
            android:textAppearance="@style/textSecondary"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/btn_trend"
            app:layout_constraintStart_toStartOf="@id/btn_trend"
            app:layout_constraintTop_toBottomOf="@id/btn_trend" />

        <ImageButton
            android:id="@+id/btn_more_info"
            style="@style/imageButton"
            android:src="@drawable/ic_more_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_trend"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more"
            android:textAppearance="@style/textSecondary"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@id/btn_more_info"
            app:layout_constraintStart_toStartOf="@id/btn_more_info"
            app:layout_constraintTop_toBottomOf="@id/btn_more_info" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_promotion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="302dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/promotion"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_btn_ver_mas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="310dp"
        android:clickable="true"
        android:textSize="14sp"
        android:text="@string/seeMore"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_list_recipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/background"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_promotion" />

</androidx.constraintlayout.widget.ConstraintLayout>